--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "toki", email = "toki.kanno@gmail.com" }
 ]
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "pathspec>=0.12.1",
+]
 
 [project.scripts]
 py-tidy = "py_tidy:main"
